--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -31,7 +31,7 @@ a {
 }
 
 .list-schedule-overview li { 
-	line-height: (@line-height-computed * 1.25);
+	line-height: (@line-height-computed * 1.4);
 
-	i { margin-right: 5px; }
+	i { margin-right: 8px; }
 }
